--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -149,7 +149,7 @@ document.addEventListener('DOMContentLoaded', async () => {
     const { error } = await sb.auth.signInWithOtp({
       email,
       options: {
-        emailRedirectTo: "https://orep.pl/wyszukiwarka"
+        emailRedirectTo: "https://orep.pl/rejestracja_formularz"
       }
     });
 
