--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -109,7 +109,7 @@
 
   <div class="wrapper">
     <!-- LOGO -->
-    <img src="/path/to/logo.png" alt="OREP Logo" class="logo">
+    <img src="logo1.png" alt="OREP Logo" class="logo">
 
     <!-- TEKST WYJAŚNIAJĄCY -->
     <div class="intro-text">
