--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -32,6 +32,7 @@
       padding: 40px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border: 2px solid black; /* <-- czarna obramówka wokół szarego tła */
       max-width: 500px;
       width: 100%;
       text-align: center;
@@ -58,7 +59,7 @@
       padding: 25px 20px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border: 2px solid red; /* <-- tutaj czerwona obramówka */
+      border: 2px solid red; /* <-- czerwona obramówka formularza */
     }
 
     .form-container h2 {
