--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -111,7 +111,7 @@
 
   <div class="wrapper">
     <!-- LOGO -->
-    <img src="stronaglowna/logo1.png" alt="OREP Logo" class="logo">
+    <img src="logo1.png" alt="OREP Logo" class="logo">
 
     <!-- TEKST WYJAŚNIAJĄCY -->
     <div class="intro-text">
