--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -22,7 +22,7 @@
     }
 
     /* ======================
-       Szary box z logo i tekstem
+       Szary box z nagłówkiem i tekstem
     ======================= */
     .wrapper {
       display: flex;
@@ -32,15 +32,36 @@
       padding: 40px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      border: 2px solid black; /* <-- czarna obramówka wokół szarego tła */
+      border: 2px solid black; /* czarna obramówka wokół szarego tła */
       max-width: 500px;
       width: 100%;
       text-align: center;
     }
 
-    .logo {
-      max-width: 150px;
-      margin-bottom: 20px;
+    /* Nowy nagłówek */
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 25px;
+    }
+
+    .header-text .text {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      font-size: 22px;
+      font-weight: 600;
+      line-height: 1.3;
+      gap: 5px;
+    }
+
+    .header-text .black {
+      color: #000;
+    }
+
+    .header-text .blue {
+      color: #2b6cb0;
     }
 
     .intro-text {
@@ -59,7 +80,7 @@
       padding: 25px 20px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border: 2px solid red; /* <-- czerwona obramówka formularza */
+      border: 2px solid red; /* czerwona obramówka formularza */
     }
 
     .form-container h2 {
@@ -110,8 +131,18 @@
 <body>
 
   <div class="wrapper">
-    <!-- LOGO -->
-    <img src="logo1.png" alt="OREP Logo" class="logo">
+
+    <!-- NOWY NAGŁÓWEK Z TEKSTEM -->
+    <div class="container">
+      <div class="header-text">
+        <div class="text">
+          <span class="black">Ogólnopolski</span>
+          <span class="black">Rejestr</span>
+          <span class="black">Elektryków</span>
+          <span class="blue">w Polsce</span>
+        </div>
+      </div>
+    </div>
 
     <!-- TEKST WYJAŚNIAJĄCY -->
     <div class="intro-text">
@@ -126,6 +157,7 @@
       <button class="btn-submit" id="emailBtn">Wyślij magic link</button>
       <div class="log" id="log"></div>
     </div>
+
   </div>
 
   <script>
