--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background: #f4f6f8;
+      background: #000000;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -32,7 +32,7 @@
       padding: 40px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      border: 2px solid black; /* czarna obramówka wokół szarego tła */
+      border: 2px solid white; /* czarna obramówka wokół szarego tła */
       max-width: 500px;
       width: 100%;
       text-align: center;
@@ -80,7 +80,7 @@
       padding: 25px 20px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.05);
-      border: 2px solid red; /* czerwona obramówka formularza */
+      border: 2px solid blue; /* czerwona obramówka formularza */
     }
 
     .form-container h2 {
