--- a/rejestracja/index.html
+++ b/rejestracja/index.html
@@ -32,7 +32,7 @@
       padding: 40px 20px;
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      border: 5px solid white; /* czarna obramówka wokół szarego tła */
+      border: 20px solid white; /* biała obramówka wokół szarego tła */
       max-width: 500px;
       width: 100%;
       text-align: center;
