--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -11,6 +11,29 @@
       justify-content: center;
       align-items: center;
       padding: 40px;
+      flex-direction: column;
+    }
+    .user-info {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      padding: 10px 15px;
+      border: 1px solid #000;
+      border-radius: 8px;
+      background-color: #fff;
+      gap: 10px;
+    }
+    .avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #2b6cb0;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 18px;
     }
     form {
       background-color: #ffffff;
@@ -90,61 +113,82 @@
   </style>
 </head>
 <body>
-  <form id="register-form">
-    <h2>Rejestracja</h2>
 
-    <label for="imie">Imię:</label>
-    <input type="text" id="imie" name="imie" required>
+<!-- INFO O ZALOGOWANYM UŻYTKOWNIKU -->
+<div id="userInfo" class="user-info" style="display:none;">
+  <div id="avatar" class="avatar"></div>
+  <div id="userEmail"></div>
+</div>
 
-    <label for="nazwisko">Nazwisko:</label>
-    <input type="text" id="nazwisko" name="nazwisko" required>
+<form id="register-form">
+  <h2>Rejestracja</h2>
 
-    <label for="miasto">Miasto:</label>
-    <input type="text" id="miasto" name="miasto">
+  <label for="imie">Imię:</label>
+  <input type="text" id="imie" name="imie" required>
 
-    <label for="wojewodztwo">Województwo:</label>
-    <input type="text" id="wojewodztwo" name="wojewodztwo">
+  <label for="nazwisko">Nazwisko:</label>
+  <input type="text" id="nazwisko" name="nazwisko" required>
 
-    <label for="nrE">Nr uprawnień E:</label>
-    <input type="text" id="nrE" name="nrE">
+  <label for="miasto">Miasto:</label>
+  <input type="text" id="miasto" name="miasto">
 
-    <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
-    <input type="text" id="nrEPomiary" name="nrEPomiary">
+  <label for="wojewodztwo">Województwo:</label>
+  <input type="text" id="wojewodztwo" name="wojewodztwo">
 
-    <label for="nrD">Nr uprawnień D:</label>
-    <input type="text" id="nrD" name="nrD">
+  <label for="nrE">Nr uprawnień E:</label>
+  <input type="text" id="nrE" name="nrE">
 
-    <label for="dataWaznosci">Data ważności:</label>
-    <input type="date" id="dataWaznosci" name="dataWaznosci">
+  <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
+  <input type="text" id="nrEPomiary" name="nrEPomiary">
 
-    <label for="wydanePrzez">Wydane przez:</label>
-    <input type="text" id="wydanePrzez" name="wydanePrzez">
+  <label for="nrD">Nr uprawnień D:</label>
+  <input type="text" id="nrD" name="nrD">
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email">
+  <label for="dataWaznosci">Data ważności:</label>
+  <input type="date" id="dataWaznosci" name="dataWaznosci">
 
-    <label for="telefon">Telefon:</label>
-    <input type="tel" id="telefon" name="telefon">
+  <label for="wydanePrzez">Wydane przez:</label>
+  <input type="text" id="wydanePrzez" name="wydanePrzez">
 
-    <label for="zajmujeSie">Zajmuje się:</label>
-    <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Opis specjalizacji..."></textarea>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email">
 
-    <label for="plik">Załącz skan uprawnień:</label>
-    <input type="file" id="plik" name="plik" accept="*/*" multiple>
+  <label for="telefon">Telefon:</label>
+  <input type="tel" id="telefon" name="telefon">
 
-    <button type="submit">Zarejestruj</button>
-    <p id="result"></p>
-    <p id="loading" style="display:none; text-align:center; color:#333; font-weight:bold;">Trwa rejestracja, proszę czekać...</p>
-  </form>
+  <label for="zajmujeSie">Zajmuje się:</label>
+  <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Opis specjalizacji..."></textarea>
+
+  <label for="plik">Załącz skan uprawnień:</label>
+  <input type="file" id="plik" name="plik" accept="*/*" multiple>
+
+  <button type="submit">Zarejestruj</button>
+  <p id="result"></p>
+  <p id="loading" style="display:none; text-align:center; color:#333; font-weight:bold;">Trwa rejestracja, proszę czekać...</p>
+</form>
 
 <script type="module">
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co' // w supabase wybierasz projekt np. ELEKTRYCY, po lewej na dole wybieraz USTAWIENIA i tam DATA API i tam URL 
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
- //  w supabase wybierasz projekt np. ELEKTRYCY, po lewej na dole wybieraz USTAWIENIA i tam API KEYS i tam LEGACY ANON
-  const supabase = createClient(supabaseUrl, supabaseKey)
+const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
+const supabaseKey = 'YOUR_ANON_KEY_HERE'
+const supabase = createClient(supabaseUrl, supabaseKey)
 
+// Sprawdzenie zalogowanego użytkownika
+document.addEventListener('DOMContentLoaded', async () => {
+  const { data: { user } } = await supabase.auth.getUser();
+  if (user) {
+    const userInfo = document.getElementById('userInfo');
+    const avatar = document.getElementById('avatar');
+    const emailDiv = document.getElementById('userEmail');
+
+    userInfo.style.display = 'flex';
+    avatar.textContent = user.email[0].toUpperCase();
+    emailDiv.textContent = user.email;
+  }
+});
+
+// Obsługa formularza
 document.getElementById('register-form').addEventListener('submit', async (e) => {
   e.preventDefault();
   document.getElementById('loading').style.display = 'block';
@@ -169,11 +213,9 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
     for (let i = 0; i < plikInput.files.length; i++) {
       const file = plikInput.files[i];
       const filePath = `permissions/${Date.now()}_${i}_${file.name}`;
-
       const { data: uploadData, error: uploadError } = await supabase.storage
         .from('attachments')
         .upload(filePath, file);
-
       if (uploadError) {
         document.getElementById('loading').style.display = 'none';
         console.error('Błąd przesyłania pliku:', uploadError.message);
@@ -181,12 +223,10 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
         document.getElementById('result').classList.add('error');
         return;
       }
-
       const { data: publicUrlData, error: urlError } = supabase
         .storage
         .from('attachments')
         .getPublicUrl(filePath);
-
       if (urlError) {
         document.getElementById('loading').style.display = 'none';
         console.error('Błąd generowania URL:', urlError.message);
@@ -194,7 +234,6 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
         document.getElementById('result').classList.add('error');
         return;
       }
-
       plikUrls.push(publicUrlData.publicUrl);
     }
   }
@@ -232,4 +271,4 @@ document.getElementById('register-form').addEventListener('submit', async (e) =>
 });
 </script>
 </body>
-</html>    
+</html>
