--- a/logowanie/index.html
+++ b/logowanie/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,6 +34,9 @@
             color: #555;
         }
         .home-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
             background-color: #0275d8;
             color: white;
             padding: 12px 24px;
@@ -46,12 +48,22 @@
         .home-button:hover {
             background-color: #025aa5;
         }
+        .home-button svg {
+            width: 20px;
+            height: 20px;
+            fill: white;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Twój wniosek został wysłany</h1>
         <p>Po pozytywnej weryfikacji otrzymasz status: "potwierdzono" i twój profil zostanie zarejestrowany w systemie.</p>
+        <a href="https://orep.pl" class="home-button">
+            <!-- Ikona domku SVG -->
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112-.3a16 16 0 0 0 16-15.7V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v96.05a16 16 0 0 0 16 15.95l112 .3a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.6V44a12 12 0 0 0-12-12h-52a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31.4a12 12 0 0 0 16.9 1.6L64 271.69V464a48 48 0 0 0 48 48h368a48 48 0 0 0 48-48V271.7l18.9 28.7a12 12 0 0 0 16.9-1.6l25.5-31.4a12 12 0 0 0-1.7-16.9z"/></svg>
+            Powrót do strony głównej
+        </a>
     </div>
 </body>
 </html>
