--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -171,7 +171,7 @@
 import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
 const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
-const supabaseKey = 'YOUR_ANON_KEY_HERE'
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
 const supabase = createClient(supabaseUrl, supabaseKey)
 
 // Sprawdzenie zalogowanego użytkownika
